# C2-Lab

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
c2lab/: __init__.py  __main__.py  auth.py  core.py  exercises.py  lab_runtime.py  node.py  observability.py  protocol.py  server.py
c2lab/static/: app.js  index.html  styles.css
docs/: DESIGN_REFERENCES.md  LABS.md  PURPLE_LAB.md  safety_boundary_report.docx
tests/: test_auth.py  test_core.py  test_dashboard.py  test_dashboard_logic.mjs  test_exercises.py  test_lab_runtime.py  test_main.py  test_node.py  test_observability.py  test_protocol.py  test_runtime.py  test_safety_boundary.py  test_server.py
