[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c2-lab-framework"
version = "0.4.0"
description = "Localhost-only C2 and bounded purple-team playbook learning framework"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
c2lab = "c2lab.__main__:main"

[tool.setuptools.package-data]
c2lab = ["static/*.html", "static/*.css", "static/*.js"]
